manifests/dashboard-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-nodeport
  namespace: kubernetes-dashboard
spec:
  type: NodePort
  ports:
    - port: 443
      targetPort: 8443
      nodePort: 30443
      protocol: TCP
  selector:
    k8s-app: kubernetes-dashboard
